--- a/src/app/components/editordemo/edit/editorautoform.component.html
+++ b/src/app/components/editordemo/edit/editorautoform.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <form (ngSubmit)="saveUser()" role="form" class="row" autoform #userForm="ngForm">
-    <fieldset style="width:100%">
+    <fieldset>
       <legend>Edit current user</legend>
       <ac-autoform [formGroup]="userForm"></ac-autoform>
       <div class="row">
