--- a/src/app/components/widgetdemo/widgets/griddemosimple.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemosimple.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="alert alert-info">
         A simple demo for the grid showing the basic features. Almost completely controlled by a distinct view model through decorators.
       </div>
@@ -10,17 +10,37 @@
     <form>
       <fieldset>
         <legend>Grid Features</legend>
-        <div class="form-group">
-        </div>
-
+        <div class="form-group"></div>
       </fieldset>
-
     </form>
-
   </div>
-  <div class="row" >
-    <div class="col-md-12">
-      <ac-datagrid [model]="model" [showActions]="false" [columnStyle]="{ footer: { 'background-color': 'silver' }, first: { 'background-color': 'orange' }, header: { color: 'white', 'background-color': 'black' } }" ></ac-datagrid>
+  <div class="row">
+    <div class="col-12">
+      <div class="alert alert-primary">
+        The grid below is using this code:
+        <pre>
+&lt;ac-datagrid [model]="model"
+             [showActions]="false"
+             [columnStyle]="{{ '{' }} footer: {{ '{' }} 'background-color': 'silver' },
+                              first: {{ '{' }} 'background-color': 'orange' },
+                              header: {{ '{' }} color: 'white', 'background-color': 'black' }
+                             }" &gt;
+&lt;/ac-datagrid&gt;</pre
+        >
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <ac-datagrid
+        [model]="model"
+        [showActions]="false"
+        [columnStyle]="{
+          footer: { 'background-color': 'silver' },
+          first: { 'background-color': 'orange' },
+          header: { color: 'white', 'background-color': 'black' }
+        }"
+      ></ac-datagrid>
     </div>
   </div>
 </div>
