Production aware docs

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,8 +4,9 @@
 <h3>Purpose</h3>
 <p>
   This is a project that helps creating sophisticated Angular components. It's not really just for adding to packages and using,
-  but more for learning. The will be a book available that explains the making of completely.
+  but more for learning. There will be a book available that explains the making of completely (planned by June 2019).
 </p>
+<h4>Grid</h4>
 <p>
   The major part is what most projects really need: a grid component. This grid can:
 </p>
@@ -17,7 +18,16 @@
     <li>Has sorting</li>
     <li>Has filtering on the client side</li>
     <li>Can edit data inline</li>
+    <li>Can be modified by using templates</li>
   </ul>
 <p>
   Just check all the features out in the <b>Features</b> section at the left.
 </p>
+<h4>Tree</h4>
+<p>Another component is a treeview. The treeview can:</p>
+<ul>
+  <li>Show a tree (obviously)</li>
+  <li>have icons</li>
+  <li>fire various events</li>
+  <li>can handle dynamic styles</li>
+</ul>
