--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -23,6 +23,9 @@
   </div>
 </div>
 <!--/.container-->
-<footer class="container-fluid">
-  <p class="text-right small">&copy; 2011 - {{ currentYear }} Joerg &lt;isageek&gt; Krause <i>www.joergkrause.de</i></p>
+<footer>
+  <p class="text-right small">&copy; 2011 - {{ currentYear }} Joerg &lt;isageek&gt; Krause <br/>
+    <i>www.joergkrause.de</i><b/>
+    Made with &#10084; in Berlin / Germany
+  </p>
 </footer>
