--- a/src/app/components/widgetdemo/widgets/griddemotemplate.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemotemplate.component.html
@@ -8,12 +8,14 @@
     </div>
   </div>
   <div class="row">
+      <div class="col-12">
     <form>
       <fieldset>
         <legend>Grid Features</legend>
         <div class="form-group"></div>
       </fieldset>
     </form>
+   </div>
   </div>
   <div class="row">
     <div class="col-12">
