--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
@@ -43,7 +43,7 @@
         <tr *ngFor="let item of model.itemsOnCurrentPage">
           <td *ngFor="let header of model.headers">
             <ng-container
-              [ngTemplateOutlet]="getActiveTemplate(header.templateHint)"
+              [ngTemplateOutlet]="getActiveTemplate(header.templateHint, header.prop)"
               [ngTemplateOutletContext]="{ $implicit: item[header.prop], pipe: header.pipe, params: header.pipeParams }"
             ></ng-container>
           </td>
@@ -70,10 +70,10 @@
     </table>
   </div>
 </div>
-<ng-template #text let-data let-modelpipe="pipe" let-params="params">
+<ng-template #string let-data let-modelpipe="pipe" let-params="params">
   {{ data | formatData: modelpipe: params }}
 </ng-template>
-<ng-template #bool let-data>
+<ng-template #boolean let-data>
   <input type="checkbox" disabled [checked]="data" />
 </ng-template>
 <ng-template #date let-data>
@@ -82,6 +82,6 @@
 <ng-template #enum let-data>
   {{ data }}
 </ng-template>
-<ng-template #num let-data let-modelpipe="pipe" let-params="params">
+<ng-template #number let-data let-modelpipe="pipe" let-params="params">
   {{ data | formatData: modelpipe: params }}
 </ng-template>
