--- a/src/app/components/dashboard/app-dashboard.component.html
+++ b/src/app/components/dashboard/app-dashboard.component.html
@@ -1,9 +1,13 @@
 ﻿<div class="row">
-	<div class="col-lg-3 col-md-3">
-		<app-infobox icon="fa-user" text="Widgets" number="3" footerText="Show widgets" [footerLink]="['/widgets/list']" color="Warning"></app-infobox>
+	<div class="col-3">
+		<app-infobox icon="fa-user" text="Widgets" number="2" footerText="Treeview + Grid" [footerLink]="['/widgets/list']" color="Warning"></app-infobox>
 	</div>
-	<div class="col-lg-3 col-md-3">
-		<app-infobox icon="fa-list" text="Forms" [number]="users.length" footerText="Show some demo data" [footerLink]="['/editor/list']"
+	<div class="col-3">
+		<app-infobox icon="fa-list" text="Forms" [number]="users.length" footerText="Model driven forms" [footerLink]="['/editor/list']"
 		 color="Info"></app-infobox>
+  </div>
+  <div class="col-6">
+		<app-infobox icon="fa-help" text="API Documentation" footerText="Complete API documentation" [footerLink]="['/docs']"
+		 color="Danger"></app-infobox>
 	</div>
 </div>
