--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -1,6 +1,6 @@
 ﻿<!-- Main Header -->
 <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
-  <a class="navbar-brand" href="/index.html"><img src="/assets/images/logo.png"/></a>
+  <a class="navbar-brand" href="/index.html"><img src="/assets/images/logo.png"/> <h1>SVOGV</h1> </a>
 </nav>
 <div class="container-fluid" id="main">
   <div class="row row-offcanvas row-offcanvas-left">
@@ -13,7 +13,7 @@
       <h2 class="display-2 hidden-xs-down">
         {{ currentRoute.title }} <small>{{ currentRoute.subTitle }}</small>
       </h2>
-      <p class="lead">Welcome to SVOGV &ndash; the 'Simple Validation and Other Great View Components' library</p>
+      <p class="lead">Welcome to SVOGV &ndash; the '<b>S</b>imple <b>V</b>alidation and <b>O</b>ther <b>G</b>reat <b>V</b>iew Components' library</p>
       <!-- Global navigation path -->
       <app-breadcrumb></app-breadcrumb>
       <!--/main col-->
@@ -25,7 +25,7 @@
 <!--/.container-->
 <footer>
   <p class="text-right small">&copy; 2011 - {{ currentYear }} Joerg &lt;isageek&gt; Krause <br/>
-    <i>www.joergkrause.de</i><b/>
+    <i>www.joergkrause.de</i><br/>
     Made with &#10084; in Berlin / Germany
   </p>
 </footer>
