--- a/src/assets/styles/site.scss
+++ b/src/assets/styles/site.scss
@@ -119,3 +119,7 @@ legend {
   padding: 0px 16px 0px 16px;
   width: auto;
 }
+blockquote {
+  padding-left: 15px;
+  border-left: 4px solid lightcyan;
+}
