--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,28 +1,26 @@
 ﻿<div class="alert alert-info">
-    SVOGV is an ongoing project that helps Angular developers to create awesome apps quite fast.
+  SVOGV is an ongoing project that helps Angular developers to create awesome apps quite fast.
 </div>
 <h3>Purpose</h3>
 <p>
-  This is a project that helps creating sophisticated Angular components. It's not really just for adding to packages and using,
-  but more for learning. There will be a book available that explains the making of completely (planned by June 2019).
+  This is a project that helps creating sophisticated Angular components. It's not really just for adding to packages and using, but more for
+  learning. There will be a book available that explains the making of completely (planned by June 2019).
 </p>
 <h4>Grid</h4>
 <p>
   The major part is what most projects really need: a grid component. This grid can:
 </p>
 <ul>
-    <li>Show any data, creating headers and rows dynamically</li>
-    <li>Format all kind of data flexibly</li>
-    <li>Can add and remove columns flexibly</li>
-    <li>Has paging</li>
-    <li>Has sorting</li>
-    <li>Has filtering on the client side</li>
-    <li>Can edit data inline</li>
-    <li>Can be modified by using templates</li>
-  </ul>
-<p>
-  Just check all the features out in the <b>Features</b> section at the left.
-</p>
+  <li>Show any data, creating headers and rows dynamically</li>
+  <li>Format all kind of data flexibly</li>
+  <li>Can add and remove columns flexibly</li>
+  <li>Has paging</li>
+  <li>Has sorting</li>
+  <li>Has filtering on the client side</li>
+  <li>Can edit data inline</li>
+  <li>Can be modified by using templates</li>
+</ul>
+<p>Just check all the features out in the <b>Features</b> section at the left.</p>
 <h4>Tree</h4>
 <p>Another component is a treeview. The treeview can:</p>
 <ul>
@@ -31,3 +29,10 @@
   <li>fire various events</li>
   <li>can handle dynamic styles</li>
 </ul>
+<h4>Impress</h4>
+<address>
+  Jörg Krause<br />
+  Hafersteig 113<br />
+  12683 Berlin<br />
+  Germany
+</address>
