docu, fix an error in grid

--- a/src/app/components/dashboard/app-dashboard.component.html
+++ b/src/app/components/dashboard/app-dashboard.component.html
@@ -3,32 +3,8 @@
     <h2>Welcome to the SVOGV project</h2>
     <div class="container">
       <p>
-        I have&nbsp;many years of experience with Web-Frameworks.&nbsp;I’m in the business&nbsp;since the early JavaScript days, know every single bit
-        in jQuery and learnt a lot about Knockout, Angular, and Durandal. But time goes on.
-      </p>
-      <blockquote>
-        <p>
-          Now Angular is here for a while – the very first time in years – such a strong feeling in our guts that’s now the first step from ancient
-          crap into something really professional. It brings the level we all know from Java and C# and the mature backend frameworks to the front
-          end.
-        </p>
-      </blockquote>
-      <p>
-        And it goes on. TypeScript is here and know we have something that’s an improvement for front end developers that matters:
-      </p>
-      <blockquote>
-        <p>
-          TypeScript brings a whole new level to pros like us. And it makes out world easier – at least a bit. And it improves the quality of our
-          product – not just a bit, a whole new step.
-        </p>
-      </blockquote>
-      <p>
-        The last years brought a lot experience and some nice projects and the outcome is an advanced peace of software that’s going to make our life
-        with Angular a lot easier.
-      </p>
-      <p>
-        It’s a <strong>widget library</strong> that bring the power of <strong>Bootstrap 4</strong>&nbsp;and <strong>Material 5</strong> to Angular
-        and&nbsp;adds some very cool stuff to build sophisticated forms – faster than ever.
+        It’s a <strong>widget library</strong> that bring the power of <strong>Bootstrap 4</strong>
+        to Angular and&nbsp;adds some very cool stuff to build sophisticated forms – faster than ever.
       </p>
       <blockquote>
         <p>
@@ -44,7 +20,7 @@
         text="Widgets"
         number="2"
         footerText="Treeview + Grid"
-        [footerLink]="['/widgets/list']"
+        [footerLink]="['/widgets']"
         color="Warning"
       ></app-infobox>
     </div>
