--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,34 +1,36 @@
 ﻿<div class="alert alert-info">
   SVOGV is an ongoing project that helps Angular developers to create awesome apps quite fast.
 </div>
+<h3>About me</h3>
+<p>
+  I have&nbsp;many years of experience with Web-Frameworks.&nbsp;I’m in the business&nbsp;since the early JavaScript days, know every single bit
+  in jQuery and learnt a lot about Knockout, Angular, and Durandal. But time goes on.
+</p>
+<blockquote>
+  <p>
+    Now Angular is here for a while – the very first time in years – such a strong feeling in our guts that’s now the first step from ancient
+    crap into something really professional. It brings the level we all know from Java and C# and the mature backend frameworks to the front
+    end.
+  </p>
+</blockquote>
+<p>
+  And it goes on. TypeScript is here and know we have something that’s an improvement for front end developers that matters:
+</p>
+<blockquote>
+  <p>
+    TypeScript brings a whole new level to pros like us. And it makes out world easier – at least a bit. And it improves the quality of our
+    product – not just a bit, a whole new step.
+  </p>
+</blockquote>
+<p>
+  The last years brought a lot experience and some nice projects and the outcome is an advanced peace of software that’s going to make our life
+  with Angular a lot easier.
+</p>
 <h3>Purpose</h3>
 <p>
   This is a project that helps creating sophisticated Angular components. It's not really just for adding to packages and using, but more for
   learning. There will be a book available that explains the making of completely (planned by June 2019).
 </p>
-<h4>Grid</h4>
-<p>
-  The major part is what most projects really need: a grid component. This grid can:
-</p>
-<ul>
-  <li>Show any data, creating headers and rows dynamically</li>
-  <li>Format all kind of data flexibly</li>
-  <li>Can add and remove columns flexibly</li>
-  <li>Has paging</li>
-  <li>Has sorting</li>
-  <li>Has filtering on the client side</li>
-  <li>Can edit data inline</li>
-  <li>Can be modified by using templates</li>
-</ul>
-<p>Just check all the features out in the <b>Features</b> section at the left.</p>
-<h4>Tree</h4>
-<p>Another component is a treeview. The treeview can:</p>
-<ul>
-  <li>Show a tree (obviously)</li>
-  <li>have icons</li>
-  <li>fire various events</li>
-  <li>can handle dynamic styles</li>
-</ul>
 <h4>Impress</h4>
 <address>
   Jörg Krause<br />
