Fix pipe chaining

--- a/src/app/components/widgetdemo/widgets/griddemotemplate.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemotemplate.component.html
@@ -23,7 +23,7 @@
         <p>The grid below is using this code:</p>
         <pre>
 &lt;ac-datagrid [model]="model" [showActions]="false">
-  &lt;ng-template #bool let-item>
+  &lt;ng-template #boolean let-item>
     &lt;span *ngIf="item">YES&lt;/span>
     &lt;span *ngIf="!item">NO&lt;/span>
   &lt;/ng-template>
